--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 asgiref==3.6.0
 attrs==22.1.0
 crispy-bootstrap4==2022.1
-Django==4.1
+dj-database-url==1.3.0
+Django==3.2
 django-crispy-forms==1.14.0
 -e git+https://github.com/jazzband/django-debug-toolbar.git@e45e5b66c398b88369b0ccc3a031005062c86747#egg=django_debug_toolbar
 django-extensions==3.1.5
@@ -10,12 +11,14 @@ flake8==5.0.4
 flake8-annotations==2.9.1
 flake8-quotes==3.3.1
 flake8-variables-names==0.0.5
+gunicorn==20.1.0
 iniconfig==1.1.1
 mccabe==0.7.0
 packaging==21.3
 pep8-naming==0.13.2
 Pillow==9.5.0
 pluggy==1.0.0
+psycopg2-binary==2.9.6
 py==1.11.0
 pycodestyle==2.9.1
 pyflakes==2.5.0
@@ -28,3 +31,5 @@ pytz==2022.7.1
 sqlparse==0.4.3
 toml==0.10.2
 tomli==2.0.1
+typing_extensions==4.5.0
+whitenoise==6.4.0
