--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,11 @@
 asgiref==3.6.0
-attrs==22.1.0
-build==0.10.0
-click==8.1.3
-crispy-bootstrap4==2022.1
-dj-database-url==1.3.0
+dj-database-url==1.2.0
+Django==4.1.4
 django-crispy-forms==1.14.0
--e git+https://github.com/jazzband/django-debug-toolbar.git@e45e5b66c398b88369b0ccc3a031005062c86747#egg=django_debug_toolbar
-django-extensions==3.1.5
-execnet==1.9.0
-flake8==5.0.4
-flake8-annotations==2.9.1
-flake8-quotes==3.3.1
-flake8-variables-names==0.0.5
-gunicorn==20.1.0
-iniconfig==1.1.1
-joblib==1.2.0
-mccabe==0.7.0
-numpy==1.24.2
-packaging==21.3
-pep8-naming==0.13.2
-Pillow==9.5.0
-pip-tools==6.13.0
-pluggy==1.0.0
+django_debug_toolbar==3.8.1
+Pillow==9.3.0
 psycopg2-binary==2.9.6
-py==1.11.0
-pycodestyle==2.9.1
-pyflakes==2.5.0
-pyparsing==3.0.9
-pyproject_hooks==1.0.0
-pytest==7.1.3
-pytest-django==4.5.2
-pytest-forked==1.4.0
-pytest-xdist==2.5.0
-pytz==2022.7.1
-scikit-learn==1.2.2
-scipy==1.10.1
 sqlparse==0.4.3
-threadpoolctl==3.1.0
-toml==0.10.2
-tomli==2.0.1
-typing_extensions==4.5.0
-whitenoise==6.4.0
+tzdata==2022.7
+whitenoise==6.2.0
+gunicorn==20.1.0
