--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,30 @@
 asgiref==3.6.0
+black==23.1.0
+boto3==1.26.125
+botocore==1.29.125
+click==8.1.3
+distlib==0.3.6
 dj-database-url==1.2.0
 Django==4.1.4
 django-crispy-forms==1.14.0
-django_debug_toolbar==3.8.1
-Pillow==9.3.0
-psycopg2-binary==2.9.6
-sqlparse==0.4.3
-tzdata==2022.7
-whitenoise==6.2.0
-gunicorn==20.1.0
 django-storages==1.13.2
+django_debug_toolbar==3.8.1
+filelock==3.12.0
+gunicorn==20.1.0
+jmespath==1.0.1
+mypy-extensions==1.0.0
+packaging==23.0
+pathspec==0.11.0
+Pillow==9.3.0
+platformdirs==3.5.0
+psycopg2-binary==2.9.6
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+s3transfer==0.6.0
+six==1.16.0
+sqlparse==0.4.3
+tomli==2.0.1
+tzdata==2022.7
+urllib3==1.26.15
+virtualenv==20.23.0
+whitenoise==6.2.0
